// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DynamicSearchField Component DynamicSearchField renders 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
    >
      <div
        class=" css-1959ul7-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-2-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1iiyd84-control"
        >
          <div
            class=" css-yhb162-ValueContainer"
          >
            <div
              class=" css-1jqq78o-placeholder"
              id="react-select-2-placeholder"
            >
              Select...
            </div>
            <div
              class=" css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-describedby="react-select-2-placeholder"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="DATA-TEST-ID"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
            >
              <i
                class="icon icon"
                data-testid="DATA-TEST-ID-magnifier"
                icon="fal,magnifying-glass"
              />
            </div>
          </div>
        </div>
        <input
          name="name"
          type="hidden"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchField Component DynamicSearchField renders with values in disabled highligted 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container highlighted"
      data-testid="DATA-TEST-ID"
    >
      <span
        class="typography"
      >
        Label 1
      </span>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchField Component DynamicSearchField renders with values in readonly 1`] = `
<div>
  <div
    class="fieldGroup"
  >
    <div
      class="container"
      data-testid="DATA-TEST-ID"
    >
      <span
        class="typography"
      >
        Label 1
      </span>
    </div>
  </div>
</div>
`;

exports[`DynamicSearchField Component DynamicSearchField renders with values with fieldSize and inline 1`] = `
<div>
  <div
    class="fieldGroup size-6 inline"
  >
    <div
      class="container"
    >
      <div
        class=" css-1959ul7-container"
      >
        <span
          class="css-1f43avz-a11yText-A11yText"
          id="react-select-3-live-region"
        />
        <span
          aria-atomic="false"
          aria-live="polite"
          aria-relevant="additions text"
          class="css-1f43avz-a11yText-A11yText"
        />
        <div
          class=" css-1iiyd84-control"
        >
          <div
            class=" css-yhb162-ValueContainer"
          >
            <div
              class=" css-1dimb5e-singleValue"
            >
              Label 1
            </div>
            <div
              class=" css-qbdosj-Input"
              data-value=""
            >
              <input
                aria-autocomplete="list"
                aria-expanded="false"
                aria-haspopup="true"
                autocapitalize="none"
                autocomplete="off"
                autocorrect="off"
                class=""
                id="DATA-TEST-ID"
                role="combobox"
                spellcheck="false"
                style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                tabindex="0"
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            class=" css-1hb7zxy-IndicatorsContainer"
          >
            <span
              class=" css-1u9des2-indicatorSeparator"
            />
            <div
              aria-hidden="true"
            >
              <i
                class="icon icon"
                data-testid="DATA-TEST-ID-magnifier"
                icon="fal,magnifying-glass"
              />
            </div>
          </div>
        </div>
        <input
          name="name"
          type="hidden"
          value="VALUE1"
        />
      </div>
    </div>
  </div>
</div>
`;
